Lombok and Mapstruct working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.database=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=c0mmunist
+spring.datasource.username=pazzio_glove
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/glove_base
