Implemented Login and Register pages Implemented Main Boxings for the RGBValue Create Loadout page

--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
     "raw-loader": "3.0.0",
     "terser": "4.6.7"
   },
-  "vaadinAppPackageHash": ""
+  "vaadinAppPackageHash": "f63dd4720e2a72d4a255403039e2a257b7fdcca7d6c18b6f4fd34f08c7138492"
 }
