--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"pins": [[14, 15, 18], [3, 4, 17], [23, 24, 25], [27, 22, 10], [8, 7, 1]], "serialNumber": "196093"}
+{"pins": [[14, 15, 18], [17, 3, 4], [25, 24, 23], [2,8,7], [27, 22, 10]], "serialNumber": "196093"}
